# zero-inbox

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  steps.md
docs/: AST_IMPLEMENTATION.md  USAGE.md  zero-inbox-explained.ipynb
examples/: README_examples.md  artist.zbx  daily_plan.zbx  fitness_buff.zbx  founder.zbx  freelancer.zbx  gamer.zbx  minimalist.zbx  night_owl.zbx  parent.zbx  power_user.zbx  remote_worker.zbx  retiree.zbx  scientist.zbx  student.zbx  teacher.zbx  traveler.zbx  work_day.zbx
src/: ast.rs  codegen.rs  config.rs  ir.rs  lexer.rs  lib.rs  main.rs  optimizer.rs  parser.rs  runtime.rs  scheduler.rs  utils.rs
tests/: scheduling.rs
tests/golden/: plan.md
zero_inbox/: .gitignore  Cargo.toml  README.md
zero_inbox/examples/: daily.zbx
zero_inbox/src/: ast.rs  error.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs
