[package]
name = "zero_inbox"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A DSL compiler for attention/task modeling that turns structured text files into optimized execution plans."
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
logos = "0.13.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.0"
tempfile = "3.3"
